# developmental-assessment

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/src/: config.py  logging_config.py  main.py
apps/api/src/data/: __init__.py  cutoff_scores.py
apps/api/src/middleware/: __init__.py  auth.py
apps/api/src/models/: __init__.py  assessment.py  mosaic.py  report.py  video.py
apps/api/src/routers/: __init__.py  analytics.py  assessment.py  behavioral.py  cognitive.py  context.py  health.py  mosaic.py  reports.py  video.py
apps/api/src/services/: __init__.py  adaptive_testing.py  archetype_service.py  assessment.py  behavioral_scoring.py  geopolitical_service.py  ikigai_service.py  mosaic_scoring.py  report_generator.py  supabase_client.py  video_analysis.py
apps/api/tests/: conftest.py  test_assessment.py  test_auth.py  test_behavioral.py  test_cognitive.py  test_context.py  test_health.py  test_mosaic.py  test_reports.py  test_video.py
apps/mobile/: .env.example  .gitignore  app.json  jest.config.js  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(auth)/: login.tsx  register.tsx
apps/mobile/app/(tabs)/: _layout.tsx  ai-info.tsx  children.tsx  index.tsx  more.tsx  progress.tsx  reports.tsx  settings.tsx  videos.tsx
apps/mobile/app/adventure/: [scenarioId].tsx  index.tsx
apps/mobile/app/assessment/: [id].tsx
apps/mobile/app/child/: [id].tsx  new.tsx
apps/mobile/src/lib/: api.ts  (+3 more)
(+54 files in other folders)
